[tool.poetry]
name = "spark-unittest-demo"
version = "0.1.0"
description = "Minimal PySpark project with unittest and CI (Ruff)"
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"
packages = [{ include = "spark_transform", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"   # Python 3.10/3.11
pyspark = "^3.5.6"        # version stable (3.5.x)

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.0.0"
ruff = "^0.6.9"
coverage = "^7.6.0"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true                 # autoriser les corrections auto (pour ruff check --fix)

[tool.ruff.lint]
select = ["E", "F", "I"]   # E/F: règles de base flake8, I: imports (équivalent isort)

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
